# intern_ali

./: pyproject.toml
lessons/l1/: l1_introduction.ipynb
lessons/l2/: l2_linear_regression.ipynb
lessons/vlm/: ressources.md
ressources/introduction/: l1_introduction.ipynb
ressources/linear_regression/: l2_linear_regression.ipynb
ressources/vlm/: vlm.ipynb
