[project]
name = "internship-ali"
version = "0.1.0"
description = ""
authors = [
    {name = "brehel",email = "briag.rehel@liebherr.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets (>=8.1.6,<9.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

